[package]
name = "algorithms"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]

anyhow = "1.0.70"
async-compression = { version = "0.3", features = ["tokio", "zstd"] }
bytes = "1.4.0"
http = "0.2.8"
http-body = "0.4.5"
lambda_runtime = "0.11.1"
md-5 = "0.10.1"
pin-project = "1.0.12"
rand = "0.8.5"
thiserror = "1.0"
tokio-stream = "0.1.8"
tracing = "0.1.37"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["macros"] }
chrono = "0.4.38"
uuid = {version = "1.8.0", features = ["serde", "v4"]}

aws-config= { version = "1.2.1", features = ["behavior-version-latest"] }
aws-sdk-s3= { version = "1.24.0", features = ["rt-tokio"] }
aws-smithy-runtime= { version = "1.3.1" }
aws-smithy-runtime-api= { version = "1.4.0", features = ["client"] }
aws-smithy-types= { version = "1.1.8", features = ["http-body-0-4-x"] }
